--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: android
+
 android:
   components:
     # The BuildTools version used by your project
@@ -17,3 +18,12 @@ android:
     # if you need to run emulator(s) during your tests
     - sys-img-armeabi-v7a-android-22
     - sys-img-x86-android-17
+
+before_script:
+    - GRADLE_OPTS="-Xms40m -Xmx3g -XX:MaxPermSize=3g"
+
+script: "./gradlew clean build test -Dpre-dex=false"
+
+branches:
+  only:
+    - master
