--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ android:
 before_script:
     - GRADLE_OPTS="-Xms40m -Xmx3g -XX:MaxPermSize=3g"
 
+sudo: required
 script: "./gradlew clean build test -Dpre-dex=false"
 
 branches:
